user tabel + login form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -82,13 +82,13 @@
                 </div>
             </div>
         </header>
+
+        <div class="container">
             {% block body %}{% endblock %}
+        </div>
             {% block javascripts %}{% endblock %}
     </body>
 </html>
-
-
-
 
 
 <body>
