--- a/templates/base/show.html.twig
+++ b/templates/base/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Logo</th>
-                <td><img class="card-img-top" src={{ vich_uploader_asset(base, 'imageFile') }}></td>
+                <td><img src="{{ vich_uploader_asset(base, 'imageFile') }}" alt="{{ base.imagename }}" height="100"></td>
             </tr>
             <tr>
                 <th>Updated_at</th>
