--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:height="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -51,7 +51,8 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <h4>Flexibel webshop </h4> <!-- dynamisch maken dat de bedrijfsnaam uit de tabel base komt -->
+            {% if (bedrijf is defined) %} <img src="{{ vich_uploader_asset(bedrijf, 'imageFile') }}" alt="{{ bedrijf.imagename }}" height="75"/>{% endif%}
+            <h5>{%  if (bedrijf is defined) %} {{ bedrijf.Bedrijfsnaam }} {% else %}Flexibel webshop {% endif%}</h5>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
