--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ base.id }}</td>
                 <td>{{ base.bedrijfsnaam }}</td>
-                <td><img class="card-img-top" src={{ vich_uploader_asset(base, 'imageFile') }}></td>
+                <td><img src="{{ vich_uploader_asset(base, 'imageFile') }}" alt="{{ base.imagename }}" height="100"></td>
                 <td>{{ base.updatedAt ? base.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
                     <a href="{{ path('base_show', {'id': base.id}) }}">show</a>
