--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,8 +7,8 @@
 
         <section class="jumbotron text-center">
             <div class="container">
-                <h1>Album example</h1>
-                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <h1>Introductie</h1>
+                <p class="lead text-muted">{% if (memo.inhoud is defined) %} {{ memo.Inhoud }} {% else %}Introduction example {% endif%}</p>
                 <p>
                     <a href="#" class="btn btn-primary my-2">Main call to action</a>
                     <a href="#" class="btn btn-secondary my-2">Secondary action</a>
